# NiaARMTS

./: .gitignore  .readthedocs.yml  .woodpecker.yml  CITATION.cff  README.md  pyproject.toml  requirements.txt  run_pso.py
.forgejo/workflows/: build.yaml
.github/workflows/: test.yml
.woodpecker/: test.yml
datasets/: intervals.csv
docs/: conf.py  index.rst  requirements.txt
docs/dev/: installation.rst
docs/niaarmts/: index.rst
docs/niaarmts/niaarmts/: dataset.rst  feature.rst  metrics.rst  niaarmts.rst  rule.rst
docs/user/: usage.rst
examples/: explainability_example.py  rule_stability_example.py  run_pso.py  run_pso_segmented_interval.py  viz.py
niaarmts/: NiaARMTS.py  __init__.py  dataset.py  explainability.py  metrics.py  rule.py  rule_stability.py
tests/: test_build_rule.py  test_dataset.py  test_feature.py  test_metrics.py  test_metrics2.py  test_tsm.py
