[tool.poetry]
name = "niaarmts"
version = "0.1.2"
description = "Time series numerical association rule mining variants"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
niapy = "^2.5.2"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
